# NEW

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  INSTALL.md  README.md  alas.py  gui.py  launcher.py  mcp_server_sse.py  pyproject.toml  run.bat  教程.md
.agent/: ARCHITECTURE.md  BASE.md  CAMPAIGN.md  COMBAT-UI.md  COMBAT.md  CONFIG.md  CONVENTIONS.md  DEVICE.md  ENTRY-ALAS.md  ENTRY-GUI.md  ENTRY-MCP-SERVER.md  GAME-FUNCTIONS.md  HANDLER.md  INFRASTRUCTURE.md  ISSUES.md  MAP-DETECTION.md  MAP.md  MODULE-MAP.md  OCR.md  OS-SYSTEM.md  README.md  UI.md
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report_cn.yaml  bug_report_en.yaml
.github/scripts/: ai_issue_labeler.py
.github/workflows/: ai-issue-labeler.yml  docker-publish.yml  git-over-cdn-123pan.yml  git-over-cdn-ssh.yml  lint.yml  sync2.yml
README/: 开发必看文档.md  开发文档目录.md
campaign/: Readme.md
campaign/campaign_main/: campaign_1_1_f.py
campaign/event_20260625_cn/: ht1.py  ht2.py  ht3.py  sp.py  t1.py  t2.py  t3.py
config/: deploy.template-AidLux-cn.yaml  deploy.template-AidLux.yaml  deploy.template-cn.yaml  deploy.template-docker.yaml  deploy.template-linux-cn.yaml  deploy.template-linux.yaml  deploy.template.yaml  template.json
deploy/: adb.py  alas.py  app.py  atomic.py  config.py  emulator.py  git.py  patch.py  set.py  utils.py  uv.py
deploy/Windows/: adb.py  alas.py  app.py  config.py  emulator.py  git.py  logger.py  patch.py  template.yaml  utils.py
deploy/docker/: Dockerfile  deploy-image.sh
deploy/git_over_cdn/: client.py
deploy/install/: emulator_windows.py
dev_tools/: button_region_editor.py  cyclic_notify.py  item_statistics.py  map_extractor.py  seed_resource_snapshots.py  snapshot_resources.py  war_archives_update.py
doc/: island_feature_plan.md
module/: exception.py  llm.py  logger.py  server_checker.py
module/awaken/: awaken.py
module/azur_stats/: assets.py
module/base/: base.py  button.py  mask.py  (+7 more)
test/: ncnn_ocr_benchmark.py  ncnn_ocr_benchmark.zh-CN.md
webapp/: ap_chart.js  ap_chart_panel.html  electron-builder.config.js  resource_chart.html  resource_chart.js
(+309 files in other folders)
