[project]
name = "azurpilot"
version = "0.0.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy==2.4.3",
    "scipy==1.17.1",
    "pillow==12.2.0",
    "opencv-python-headless==4.13.0.92",
    "imageio==2.26.0",
    "imageio-ffmpeg==0.6.0",
    "adbutils==0.11.0",
    "uiautomator2==2.16.17",
    "uiautomator2cache==0.3.0.1",
    "wrapt==1.15.0",
    "retrying==1.3.4",
    "jellyfish==0.9.0",
    "pyyaml==6.0.3",
    "inflection==0.5.1",
    "pywebio==1.7.1",
    "starlette==0.49.1",
    "anyio==4.13.0",
    "uvicorn[standard]==0.44.0",
    "aiofiles==23.1.0",
    "pypresence==4.2.1",
    "rich==11.2.0",
    "zerorpc==0.6.3",
    "pyzmq==27.1.0",
    "onepush==1.2.0",
    "psutil==5.9.4",
    "chardet==5.1.0",
    "matplotlib==3.10.8",
    "pycryptodome==3.23.0",
    "typing-extensions>=4.15.0",
    "pydantic>=2.12.5",
    "rapidocr==3.7.0",
    "ncnn>=1.0.20260114",
    "onnxruntime-directml==1.24.4; sys_platform == 'win32'",
    "onnxruntime==1.26.0; sys_platform == 'linux'",
    "onnxruntime==1.26.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "watchdog>=6.0.0",
    "numba==0.64.0",
    "uv==0.10.2",
    "lz4==4.4.5",
    "setuptools==75.8.2",
    "importlib-resources==6.0.0",
    "importlib-metadata==8.0.0",
    "openai==2.30.0",
    "mcp==1.23.0",
    "sse-starlette==3.0.3",
    "pygments==2.20.0",
    "pip==26.0.1",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.uv]
index = [
    { url = "https://mirrors.aliyun.com/pypi/simple/" },
    { url = "https://pypi.tuna.tsinghua.edu.cn/simple/" },
    { url = "https://mirrors.cloud.tencent.com/pypi/simple/" },
    { url = "https://repo.huaweicloud.com/repository/pypi/simple/" },
    { url = "https://pypi.mirrors.ustc.edu.cn/simple/" },
    { url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/" },
    { url = "https://pypi.douban.com/simple/" },
    { url = "https://pypi.hustunique.com/" },
    { url = "https://pypi.sdutlinux.org/" },
]
index-url = "https://pypi.org/simple/"
package = false
